Project 2/2048/doc/logfile.txt
Project documentation
<---- javadoc command: ---->
C:\Program Files (x86)\BlueJ\jdk\bin\javadoc.exe
-sourcepath
D:\UWA\CITS1001\Project 2\2048
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.8.2.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;D:\UWA\CITS1001\Project 2\2048
-d
D:\UWA\CITS1001\Project 2\2048\doc
-encoding
windows-1252
-charset
windows-1252
-docletpath
C:\Program Files (x86)\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
-doctitle
2048
-windowtitle
2048
-author
-version
-nodeprecated
-package
-link
http://download.oracle.com/javase/8/docs/api/
D:\UWA\CITS1001\Project 2\2048/Play2048.java
D:\UWA\CITS1001\Project 2\2048/SimpleCanvas.java
D:\UWA\CITS1001\Project 2\2048/SquareTest.java
D:\UWA\CITS1001\Project 2\2048/GameState.java
D:\UWA\CITS1001\Project 2\2048/Square.java
D:\UWA\CITS1001\Project 2\2048/FileIO.java
D:\UWA\CITS1001\Project 2\2048/GameStateTest.java
<---- end of javadoc command ---->
Loading source file D:\UWA\CITS1001\Project 2\2048\Play2048.java...
D:\UWA\CITS1001\Project 2\2048\Play2048.java:46: error: reached end of file while parsing
    }
     ^
Loading source file D:\UWA\CITS1001\Project 2\2048\SimpleCanvas.java...
Loading source file D:\UWA\CITS1001\Project 2\2048\SquareTest.java...
Loading source file D:\UWA\CITS1001\Project 2\2048\GameState.java...
Loading source file D:\UWA\CITS1001\Project 2\2048\Square.java...
Loading source file D:\UWA\CITS1001\Project 2\2048\FileIO.java...
Loading source file D:\UWA\CITS1001\Project 2\2048\GameStateTest.java...
1 error
